chore: Finish Transitions

--- a/Challenge04LGBB/View/Base.lproj/Main.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="122"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Etapa 1 de 3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uYZ-ye-9fs">
-                                        <rect key="frame" x="132" y="65" width="150" height="39"/>
+                                        <rect key="frame" x="127.5" y="65" width="159" height="39"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="3lX-6q-z1g"/>
                                             <constraint firstAttribute="height" constant="39" id="afz-l7-oh1"/>
@@ -59,7 +59,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="Seta 1" title=""/>
                                         <connections>
-                                            <segue destination="nXb-Ml-c2X" kind="presentation" modalPresentationStyle="fullScreen" id="DoW-HL-gnf"/>
+                                            <segue destination="nXb-Ml-c2X" kind="presentation" identifier="Back" modalPresentationStyle="fullScreen" id="DoW-HL-gnf"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -79,7 +79,7 @@
                                 <rect key="frame" x="127" y="146" width="160" height="74"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Turnos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="woD-OK-cUV">
-                                        <rect key="frame" x="27" y="0.0" width="106.5" height="54.5"/>
+                                        <rect key="frame" x="28.5" y="0.0" width="103" height="40"/>
                                         <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="34"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -240,7 +240,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
-                                            <segue destination="wpp-N7-6pB" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="f5t-sa-VjL"/>
+                                            <segue destination="wpp-N7-6pB" kind="presentation" identifier="End" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="f5t-sa-VjL"/>
                                         </connections>
                                     </button>
                                 </subviews>
