--- a/Challenge04LGBB/View/ChosenRecipe.storyboard
+++ b/Challenge04LGBB/View/ChosenRecipe.storyboard
@@ -26,10 +26,10 @@
             </objects>
             <point key="canvasLocation" x="669" y="17"/>
         </scene>
-        <!--Choosen Recipe View Controller-->
+        <!--Chosen Recipe View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="ChoosenRecipeViewController" customModule="Challenge04LGBB" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Y6W-OH-hqX" customClass="ChosenRecipeViewController" customModule="Challenge04LGBB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
