--- a/Challenge04LGBB/View/ChosenRecipe.storyboard
+++ b/Challenge04LGBB/View/ChosenRecipe.storyboard
@@ -44,17 +44,50 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6X5-AK-laJ">
-                                <rect key="frame" x="327" y="94" width="67" height="44"/>
+                                <rect key="frame" x="249" y="92" width="32" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" systemColor="tintColor"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="Settings"/>
+                                <buttonConfiguration key="configuration" style="plain" image="settings-red"/>
                                 <connections>
                                     <segue destination="lfX-SD-Q8k" kind="presentation" identifier="Config" modalPresentationStyle="fullScreen" id="7M2-X6-fEn"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I3B-gS-uEv">
+                                <rect key="frame" x="83" y="92" width="32" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" systemColor="tintColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="Back"/>
+                            </button>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xOR-84-wZn">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fv6-iY-xSJ" userLabel="RecipeView">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1300"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1300" id="lT2-mf-8Sz"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Fv6-iY-xSJ" secondAttribute="bottom" id="HGl-xW-345"/>
+                                    <constraint firstItem="Fv6-iY-xSJ" firstAttribute="top" secondItem="xOR-84-wZn" secondAttribute="top" id="Oqc-eN-jLS"/>
+                                    <constraint firstAttribute="trailing" secondItem="Fv6-iY-xSJ" secondAttribute="trailing" id="m5R-ZY-dN9"/>
+                                    <constraint firstItem="Fv6-iY-xSJ" firstAttribute="leading" secondItem="xOR-84-wZn" secondAttribute="leading" id="tuu-BL-LX3"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Fv6-iY-xSJ" firstAttribute="width" secondItem="5EZ-qb-Rvc" secondAttribute="width" id="6u7-im-0BM"/>
+                            <constraint firstItem="xOR-84-wZn" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Vhl-R1-8eI"/>
+                            <constraint firstItem="xOR-84-wZn" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="akf-VF-fJ8"/>
+                            <constraint firstItem="xOR-84-wZn" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="bmc-6R-s3i"/>
+                            <constraint firstAttribute="bottom" secondItem="xOR-84-wZn" secondAttribute="bottom" id="lgN-cN-b1H"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="startButton" destination="aj3-nP-hDa" id="hCb-jZ-1CV"/>
@@ -66,9 +99,13 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Settings" width="33" height="33"/>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="Back" width="32" height="33"/>
+        <image name="settings-red" width="33" height="32"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
