feat: continue view creation progress

--- a/Challenge04LGBB/View/ChosenRecipe.storyboard
+++ b/Challenge04LGBB/View/ChosenRecipe.storyboard
@@ -7,6 +7,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Baloo2-Bold.ttf">
+            <string>Baloo2-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--ConfigScreen-->
         <scene sceneID="pac-c8-3Qt">
@@ -34,28 +39,96 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aj3-nP-hDa">
-                                <rect key="frame" x="101" y="433" width="213" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="gray" title="Para a tela de passo-a-passo"/>
-                                <connections>
-                                    <action selector="playSound:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="BK4-4C-bEt"/>
-                                    <segue destination="k0H-Kv-ks9" kind="show" identifier="Recipe" id="AqW-82-g5C"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6X5-AK-laJ">
-                                <rect key="frame" x="327" y="94" width="67" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="Settings"/>
-                                <connections>
-                                    <segue destination="lfX-SD-Q8k" kind="presentation" identifier="Config" modalPresentationStyle="fullScreen" id="7M2-X6-fEn"/>
-                                </connections>
-                            </button>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iVs-P4-tZT">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NNA-Xk-G1p" userLabel="RecipeView">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1300"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1BP-c6-CeK" userLabel="BackButton">
+                                                <rect key="frame" x="20" y="40" width="32" height="32"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="32" id="iS7-Fd-Wah"/>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="32" id="zev-AS-F9R"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="Back"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6X5-AK-laJ" userLabel="ConfigButton">
+                                                <rect key="frame" x="362" y="40" width="32" height="32"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="32" id="AsA-mT-v2O"/>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="32" id="PrE-p0-JdP"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="settings-red"/>
+                                                <connections>
+                                                    <segue destination="lfX-SD-Q8k" kind="presentation" identifier="Config" modalPresentationStyle="fullScreen" id="7M2-X6-fEn"/>
+                                                </connections>
+                                            </button>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nr7-3y-GTZ">
+                                                <rect key="frame" x="20" y="102" width="374" height="374"/>
+                                                <color key="backgroundColor" red="0.99607843137254903" green="0.90588235294117647" blue="0.92156862745098034" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="374" id="W1r-Z3-8D4"/>
+                                                    <constraint firstAttribute="width" constant="374" id="ecw-ZR-vUS"/>
+                                                </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <integer key="value" value="20"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </view>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pão de Queijo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ov-Dq-3bS">
+                                                <rect key="frame" x="20" y="506" width="185" height="49"/>
+                                                <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aj3-nP-hDa" userLabel="StartButton">
+                                                <rect key="frame" x="101" y="1179" width="213" height="31"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="gray" title="Para a tela de passo-a-passo"/>
+                                                <connections>
+                                                    <action selector="playSound:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="BK4-4C-bEt"/>
+                                                    <segue destination="k0H-Kv-ks9" kind="show" identifier="Recipe" id="AqW-82-g5C"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="nr7-3y-GTZ" firstAttribute="top" secondItem="6X5-AK-laJ" secondAttribute="bottom" constant="30" id="0Ex-eG-LBH"/>
+                                            <constraint firstItem="6ov-Dq-3bS" firstAttribute="top" secondItem="nr7-3y-GTZ" secondAttribute="bottom" constant="30" id="0Xx-8e-1lJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="nr7-3y-GTZ" secondAttribute="trailing" constant="20" id="4Ai-ZN-PKL"/>
+                                            <constraint firstItem="1BP-c6-CeK" firstAttribute="top" secondItem="NNA-Xk-G1p" secondAttribute="top" constant="40" id="7JY-NH-rWm"/>
+                                            <constraint firstItem="nr7-3y-GTZ" firstAttribute="leading" secondItem="NNA-Xk-G1p" secondAttribute="leading" constant="20" id="KZm-Yw-Yar"/>
+                                            <constraint firstAttribute="trailing" secondItem="6X5-AK-laJ" secondAttribute="trailing" constant="20" id="N3N-5W-qzI"/>
+                                            <constraint firstItem="6ov-Dq-3bS" firstAttribute="leading" secondItem="NNA-Xk-G1p" secondAttribute="leading" constant="20" id="Oxq-y2-GHY"/>
+                                            <constraint firstAttribute="height" constant="1300" id="dQP-pr-iE0"/>
+                                            <constraint firstItem="1BP-c6-CeK" firstAttribute="leading" secondItem="NNA-Xk-G1p" secondAttribute="leading" constant="20" id="dog-kO-pTJ"/>
+                                            <constraint firstItem="6X5-AK-laJ" firstAttribute="top" secondItem="NNA-Xk-G1p" secondAttribute="top" constant="40" id="ifn-dG-6bf"/>
+                                            <constraint firstItem="nr7-3y-GTZ" firstAttribute="top" secondItem="1BP-c6-CeK" secondAttribute="bottom" constant="30" id="vvi-ke-mgw"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="NNA-Xk-G1p" secondAttribute="bottom" id="Jn6-Zd-czI"/>
+                                    <constraint firstItem="NNA-Xk-G1p" firstAttribute="top" secondItem="iVs-P4-tZT" secondAttribute="top" id="YM0-ox-EQb"/>
+                                    <constraint firstItem="NNA-Xk-G1p" firstAttribute="leading" secondItem="iVs-P4-tZT" secondAttribute="leading" id="eR1-zm-SRq"/>
+                                    <constraint firstAttribute="trailing" secondItem="NNA-Xk-G1p" secondAttribute="trailing" id="j4i-9e-oOA"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="iVs-P4-tZT" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Ar4-AT-AGI"/>
+                            <constraint firstItem="NNA-Xk-G1p" firstAttribute="width" secondItem="5EZ-qb-Rvc" secondAttribute="width" id="BjF-zJ-5aV"/>
+                            <constraint firstItem="iVs-P4-tZT" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="hgl-Sb-c60"/>
+                            <constraint firstAttribute="bottom" secondItem="iVs-P4-tZT" secondAttribute="bottom" id="oxV-GC-2C9"/>
+                            <constraint firstItem="iVs-P4-tZT" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="rkQ-ke-ZCA"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="startButton" destination="aj3-nP-hDa" id="hCb-jZ-1CV"/>
@@ -67,9 +140,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Settings" width="33" height="33"/>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="Back" width="32" height="33"/>
+        <image name="settings-red" width="33" height="32"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
